# filter-magic

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: error.cpp  filter.cpp  log.cpp  main.cpp
src/include/: error.h  filter.h  log.h
